# teamup

./: .gitignore  backup_events.py  environment.yaml  examples.py  get_schedules.py  main.py  requirements.txt  send_email.py  setup.cfg  update_events.py
teamup/: __init__.py  api.py  constants.py  events.py  fields.py  misc.py  schedule.py  subcals.py  updater.py
