[metadata]
name = teamup
version = 0.1.0
author = Chris Santiago
email = cjsantiago@gatech.edu

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    requests
    pandas
    tqdm
    aiohttp

[options.packages.find]
exclude = tests

[options.extras_require]
docs = sphinx; furo; myst-parser
tests = nox; pytest; pytest-cov
qa = mypy; pylint; flake8; isort; check-manifest; pre-commit
build = twine; wheel